* Menu dimensions fixed in FireFox * Views should not overflow into menu * CSS clash with GeoGebraTube fixed
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@41689 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
@@ -2408,7 +2408,7 @@ body.application[dir=rtl] .toolbar_mainItem {
 	margin-left: 50px;
 }
 
-.toolbar_item {
+.GeoGebraFrame li.toolbar_item {
 	margin: 0px 5px 0px 0px;
 	text-align: center;
 	position: relative;
